--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta http-equiv="Refresh" content="2; url=src/index.js" />
+    <!-- <meta http-equiv="Refresh" content="2; url=src/index.js" /> -->
     <!--
       Notice the use of %PUBLIC_URL% in the tag above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -18,6 +18,7 @@
   </head>
   <body>
     <div id="root"></div>
+    <!-- <script url="src/index.js"></script> -->
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
